--- a/package.json
+++ b/package.json
@@ -15,5 +15,5 @@
   "keywords": ["Jekyll", "Blog", "Heckle"],
   "homepage": "https://github.com/smo-key/heckle",
   "author": "Arthur Pachachura <pachachura.arthur@gmail.com> / Original heckle: Marijn Haverbeke <marijnh@gmail.com>",
-  "repositories": [{"type": "git", "url": "https://github.com/smo-key/heckle.git"}]
+  "repository": {"type": "git", "url": "https://github.com/smo-key/heckle.git"}
 }
