Update towards Hekyll

--- a/package.json
+++ b/package.json
@@ -1,19 +1,19 @@
 {
-  "name": "heckle-blog",
-  "version":"0.1.1",
-  "main": "heckle.js",
-  "description": "Static webpage generator",
+  "name": "hekyll",
+  "version":"0.1.2",
+  "main": "hekyll.js",
+  "description": "Jekyll port to NodeJS",
   "licenses": [{"type": "MIT",
-                "url": "https://raw.github.com/smo-key/heckle/master/LICENSE"}],
+                "url": "https://raw.github.com/smo-key/hekyll/master/LICENSE"}],
   "dependencies": {"dateformat": "1.x.x",
                    "marked": "0.2.x",
                    "rimraf": "2.x.x",
                    "js-yaml": "1.x.x",
                    "codemirror": "git+https://github.com/marijnh/CodeMirror.git",
-                   "mold-template": "1.x.x"},
-  "bugs": "http://github.com/smo-key/heckle/issues",
-  "keywords": ["Jekyll", "Blog", "Heckle"],
-  "homepage": "https://github.com/smo-key/heckle",
-  "author": "Arthur Pachachura <pachachura.arthur@gmail.com> / Original heckle: Marijn Haverbeke <marijnh@gmail.com>",
-  "repository": {"type": "git", "url": "https://github.com/smo-key/heckle.git"}
+                   "hekyll-mold": "git+https://github.com/smo-key/hekyll-mold.git"},
+  "bugs": "http://github.com/smo-key/hekyll/issues",
+  "keywords": ["Jekyll", "Blog", "Hekyll"],
+  "homepage": "https://github.com/smo-key/hekyll",
+  "author": "Arthur Pachachura <pachachura.arthur@gmail.com>",
+  "repository": {"type": "git", "url": "https://github.com/smo-key/hekyll.git"}
 }
